kubernetes/apps/base-system/kubechecks/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kubechecks
  labels:
    app.kubernetes.io/part-of: infrastructure
    app.kubernetes.io/managed-by: argocd
    dev.peekoff: deployment
    kubernetes.io/metadata.name: kubechecks
    pod-security.kubernetes.io/enforce: baseline
